# Bayesian-A-B-Playground

./: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_tests.sh
examples/: api_client_example.py  basic_usage.py  take_home_demo.py
src/: __init__.py  api.py  beta_binomial.py  dirichlet_multinomial.py  schemas.py  visualize.py
tests/: __init__.py  test_api.py  test_beta_binomial.py  test_dirichlet_multinomial.py
